@@ -1,16 +1,13 @@
 package com.dutytracker.usecase.incident;
-import com.dutytracker.usecase.validator.incident.*;
 
-
-
-
-
-
-
-
-
-
-
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import com.dutytracker.domain.*;
 import com.dutytracker.domain.exceptions.IncidentDuringWorkingHoursException;
@@ -24,6 +21,7 @@ import com.dutytracker.gateway.oncall.OnCallDayEntryGateway;
 import com.dutytracker.gateway.profile.EngineerProfileGateway;
 import com.dutytracker.usecase.request.incident.*;
 import com.dutytracker.usecase.response.incident.*;
+import com.dutytracker.usecase.validator.incident.*;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.DayOfWeek;
@@ -39,42 +37,51 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+
 @ExtendWith(MockitoExtension.class)
 class CalculateOvertimeEntriesUseCaseTest {
 
-    @Mock IncidentGateway incidentGateway;
-    @Mock EngineerProfileGateway engineerProfileGateway;
-    @Mock CompensationRateGateway compensationRateGateway;
-    @Mock OvertimeEntryGateway overtimeEntryGateway;
-    @Mock OnCallDayEntryGateway onCallDayEntryGateway;
-    @Mock PublicHolidayGateway publicHolidayGateway;
-    @Mock CalculateOvertimeEntriesValidator validator;
+    @Mock
+    IncidentGateway incidentGateway;
+
+    @Mock
+    EngineerProfileGateway engineerProfileGateway;
+
+    @Mock
+    CompensationRateGateway compensationRateGateway;
+
+    @Mock
+    OvertimeEntryGateway overtimeEntryGateway;
+
+    @Mock
+    OnCallDayEntryGateway onCallDayEntryGateway;
+
+    @Mock
+    PublicHolidayGateway publicHolidayGateway;
+
+    @Mock
+    CalculateOvertimeEntriesValidator validator;
 
     CalculateOvertimeEntriesUseCase useCase;
 
     private static final EngineerProfile PROFILE = new EngineerProfile(
             1L,
             EmployeeType.INTERNAL,
-            Set.of(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY,
-                    DayOfWeek.THURSDAY, DayOfWeek.FRIDAY),
+            Set.of(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY),
             LocalTime.of(9, 0),
             LocalTime.of(17, 0),
-            Instant.now()
-    );
+            Instant.now());
 
     @BeforeEach
     void setUp() {
         useCase = new CalculateOvertimeEntriesUseCase(
-                incidentGateway, engineerProfileGateway, compensationRateGateway,
-                overtimeEntryGateway, onCallDayEntryGateway, publicHolidayGateway, validator);
+                incidentGateway,
+                engineerProfileGateway,
+                compensationRateGateway,
+                overtimeEntryGateway,
+                onCallDayEntryGateway,
+                publicHolidayGateway,
+                validator);
     }
 
     /** Stubs saveAll to return entries with sequential IDs. */
@@ -84,9 +91,16 @@ class CalculateOvertimeEntriesUseCaseTest {
             long id = 1L;
             List<OvertimeEntry> result = new java.util.ArrayList<>();
             for (OvertimeEntry e : input) {
-                result.add(new OvertimeEntry(id++, e.incidentId(), e.overtimeHours(),
-                        e.allowanceHours(), e.allowancePercentage(),
-                        e.timeFrom(), e.timeTo(), e.isAllowanceEntry(), e.manualOverride()));
+                result.add(new OvertimeEntry(
+                        id++,
+                        e.incidentId(),
+                        e.overtimeHours(),
+                        e.allowanceHours(),
+                        e.allowancePercentage(),
+                        e.timeFrom(),
+                        e.timeTo(),
+                        e.isAllowanceEntry(),
+                        e.manualOverride()));
             }
             return result;
         });
@@ -107,8 +121,7 @@ class CalculateOvertimeEntriesUseCaseTest {
     void shouldCreateBaseOvertimeEntryWhenIncidentIsEntirelyBeforeWorkingHours() {
         // given — Tuesday Apr 15, 02:00–03:45 (105 min → ceil=2h)
         LocalDate date = LocalDate.of(2026, 4, 14); // Tuesday
-        Incident incident = new Incident(10L, null, date,
-                LocalTime.of(2, 0), LocalTime.of(3, 45), Instant.now());
+        Incident incident = new Incident(10L, null, date, LocalTime.of(2, 0), LocalTime.of(3, 45), Instant.now());
 
         when(incidentGateway.findById(10L)).thenReturn(Optional.of(incident));
         when(engineerProfileGateway.find()).thenReturn(Optional.of(PROFILE));
@@ -124,7 +137,7 @@ class CalculateOvertimeEntriesUseCaseTest {
         assertThat(result.incidentId()).isEqualTo(10L);
         assertThat(result.entries()).hasSize(1);
 
-        OvertimeEntryResponse entry = result.entries().get(0);
+        OvertimeEntryResponse entry = result.entries().getFirst();
         assertThat(entry.isAllowanceEntry()).isFalse();
         assertThat(entry.overtimeHours()).isEqualByComparingTo(hours(2));
         assertThat(entry.timeFrom()).isEqualTo(LocalTime.of(2, 0));
@@ -139,8 +152,7 @@ class CalculateOvertimeEntriesUseCaseTest {
     void shouldThrowIncidentDuringWorkingHoursExceptionWhenAllHoursFallWithinWorkingHours() {
         // given — Tuesday Apr 15, 10:00–11:30 (entirely inside 09:00–17:00)
         LocalDate date = LocalDate.of(2026, 4, 14);
-        Incident incident = new Incident(20L, null, date,
-                LocalTime.of(10, 0), LocalTime.of(11, 30), Instant.now());
+        Incident incident = new Incident(20L, null, date, LocalTime.of(10, 0), LocalTime.of(11, 30), Instant.now());
 
         when(incidentGateway.findById(20L)).thenReturn(Optional.of(incident));
         when(engineerProfileGateway.find()).thenReturn(Optional.of(PROFILE));
@@ -160,11 +172,10 @@ class CalculateOvertimeEntriesUseCaseTest {
     void shouldThrowOvertimeDayOffExceptionWhenDayEntryHasTimeForTimeFlag() {
         // given — Monday Apr 14, onCallPeriodId=1, day entry has timeForTimeFlag=true
         LocalDate date = LocalDate.of(2026, 4, 13); // Monday
-        Incident incident = new Incident(30L, 1L, date,
-                LocalTime.of(2, 0), LocalTime.of(3, 0), Instant.now());
+        Incident incident = new Incident(30L, 1L, date, LocalTime.of(2, 0), LocalTime.of(3, 0), Instant.now());
 
-        OnCallDayEntry dayEntry = new OnCallDayEntry(100L, 1L, date,
-                BigDecimal.valueOf(24), StandbyRateType.WEEKDAY_SATURDAY, false, true, false);
+        OnCallDayEntry dayEntry = new OnCallDayEntry(
+                100L, 1L, date, BigDecimal.valueOf(24), StandbyRateType.WEEKDAY_SATURDAY, false, true, false);
 
         when(incidentGateway.findById(30L)).thenReturn(Optional.of(incident));
         when(engineerProfileGateway.find()).thenReturn(Optional.of(PROFILE));
@@ -185,8 +196,7 @@ class CalculateOvertimeEntriesUseCaseTest {
     void shouldSkipDayOffCheckAndCreateEntriesWhenIncidentHasNoOnCallPeriodId() {
         // given — non-on-call incident (onCallPeriodId=null): no day-off check performed
         LocalDate date = LocalDate.of(2026, 4, 13); // Monday
-        Incident incident = new Incident(40L, null, date,
-                LocalTime.of(6, 0), LocalTime.of(7, 0), Instant.now());
+        Incident incident = new Incident(40L, null, date, LocalTime.of(6, 0), LocalTime.of(7, 0), Instant.now());
 
         when(incidentGateway.findById(40L)).thenReturn(Optional.of(incident));
         when(engineerProfileGateway.find()).thenReturn(Optional.of(PROFILE));
@@ -212,8 +222,7 @@ class CalculateOvertimeEntriesUseCaseTest {
         LocalDate sunday = LocalDate.of(2026, 4, 19); // Sunday
         assertThat(sunday.getDayOfWeek()).isEqualTo(DayOfWeek.SUNDAY);
 
-        Incident incident = new Incident(50L, null, sunday,
-                LocalTime.of(10, 0), LocalTime.of(11, 0), Instant.now());
+        Incident incident = new Incident(50L, null, sunday, LocalTime.of(10, 0), LocalTime.of(11, 0), Instant.now());
 
         when(incidentGateway.findById(50L)).thenReturn(Optional.of(incident));
         when(engineerProfileGateway.find()).thenReturn(Optional.of(PROFILE));
@@ -227,7 +236,7 @@ class CalculateOvertimeEntriesUseCaseTest {
 
         // then — full segment 10:00–11:00, 60 min → 1h
         assertThat(result.entries()).hasSize(1);
-        OvertimeEntryResponse entry = result.entries().get(0);
+        OvertimeEntryResponse entry = result.entries().getFirst();
         assertThat(entry.isAllowanceEntry()).isFalse();
         assertThat(entry.overtimeHours()).isEqualByComparingTo(hours(1));
         assertThat(entry.timeFrom()).isEqualTo(LocalTime.of(10, 0));
@@ -241,21 +250,21 @@ class CalculateOvertimeEntriesUseCaseTest {
     void shouldCreateBaseAndAllowanceEntriesWhenMatchingRateZoneExists() {
         // given — Tuesday Apr 15, 22:00–23:30 (90 min → ceil=2h), rate zone 22:00–23:59 at 50%
         LocalDate date = LocalDate.of(2026, 4, 14); // Tuesday
-        Incident incident = new Incident(60L, null, date,
-                LocalTime.of(22, 0), LocalTime.of(23, 30), Instant.now());
+        Incident incident = new Incident(60L, null, date, LocalTime.of(22, 0), LocalTime.of(23, 30), Instant.now());
 
         CompensationRate allowanceRate = new CompensationRate(
-                1L, EmployeeType.INTERNAL, RateCategory.OVERTIME_ALLOWANCE,
+                1L,
+                EmployeeType.INTERNAL,
+                RateCategory.OVERTIME_ALLOWANCE,
                 "Evening allowance",
-                LocalTime.of(22, 0), LocalTime.of(23, 59),
-                new BigDecimal("50.00")
-        );
+                LocalTime.of(22, 0),
+                LocalTime.of(23, 59),
+                new BigDecimal("50.00"));
 
         when(incidentGateway.findById(60L)).thenReturn(Optional.of(incident));
         when(engineerProfileGateway.find()).thenReturn(Optional.of(PROFILE));
         when(publicHolidayGateway.isHoliday(date)).thenReturn(false);
-        when(compensationRateGateway.findByEmployeeType(EmployeeType.INTERNAL))
-                .thenReturn(List.of(allowanceRate));
+        when(compensationRateGateway.findByEmployeeType(EmployeeType.INTERNAL)).thenReturn(List.of(allowanceRate));
         givenNoExistingOvertimeEntries();
         givenSaveAllReturnsEntries();
 
@@ -266,13 +275,17 @@ class CalculateOvertimeEntriesUseCaseTest {
         assertThat(result.entries()).hasSize(2);
 
         OvertimeEntryResponse base = result.entries().stream()
-                .filter(e -> !e.isAllowanceEntry()).findFirst().orElseThrow();
+                .filter(e -> !e.isAllowanceEntry())
+                .findFirst()
+                .orElseThrow();
         assertThat(base.overtimeHours()).isEqualByComparingTo(hours(2));
         assertThat(base.timeFrom()).isEqualTo(LocalTime.of(22, 0));
         assertThat(base.timeTo()).isEqualTo(LocalTime.of(23, 30));
 
         OvertimeEntryResponse allowance = result.entries().stream()
-                .filter(OvertimeEntryResponse::isAllowanceEntry).findFirst().orElseThrow();
+                .filter(OvertimeEntryResponse::isAllowanceEntry)
+                .findFirst()
+                .orElseThrow();
         assertThat(allowance.allowanceHours()).isEqualByComparingTo(hours(2));
         assertThat(allowance.allowancePercentage()).isEqualByComparingTo(new BigDecimal("50.00"));
         assertThat(allowance.timeFrom()).isEqualTo(LocalTime.of(22, 0));
